# facesentiment

./: README.md  pyproject.toml
src/: agent.py  camera.py  main.py
